# my_todo

./: .api_url_cache.json  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  my_todo.sln  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
app/: db.py  main.py  models.py  schemas.py  security.py  storage.py
app/static/: app.js  index.html  styles.css
backend/: __init__.py  app.py  debug_hook.py  events.py  logging_listeners.py  storage.py  storage_redis.py
backend/ai/: __init__.py  chess_providers.py
backend/core/: info_builder.py  primitives.py  ruleset_registry.py  scheduling.py  templates.py
backend/engine/: __init__.py  ai.py  auto_enemy.py  core.py  rules.py  runtime.py  session.py  store.py  tbs_engine.py
backend/engine/actions/: __init__.py  attack.py  base.py  end_turn.py  move.py  skill.py
backend/engine/logging/: logger.py
backend/engine/systems/: __init__.py  combat.py  effects.py  pathfinding.py  stats.py  turn.py  victory.py
backend/games/chess/: fen.py
backend/missions/: demo.py
backend/models/: api.py  common.py  enums.py  evaluation.py  map.py  mission.py  modifiers.py  session.py  skills.py  tbs.py  units.py
backend/routes/: chess_ai.py  chess_ui.py
backend/rulesets/: __init__.py
backend/rulesets/chess/: __init__.py  actions.py  factory.py  models.py  rules.py  ruleset.py
backend/rulesets/tbs/: __init__.py  actions.py  factory.py  models.py  rules.py  ruleset.py
clients/godot_csharp/: .gitignore  Dockerfile.build  Main.tscn  MinimalTbsViewer.cs  TbsClient.csproj  TbsClient.sln  export_presets.cfg  project.godot
static/: app.js  chess-minimal.html  chess-minimal.js  createSession.js  game.html  game.js  grid.js  index.html  initiative.js  log.js  sessions.js  styles.css  utils.js
tests/: conftest.py  test_chess_rules.py  test_concurrency_integration.py  test_tbs_rules.py
tests/integration/: conftest.py  templates.py  test_aoe_fireball.py  test_api_chess.py  test_api_tbs.py  test_attack_enumeration.py  test_buffs_debuffs.py  test_chess_en_passant_line.py  test_chess_full_game_opera_line_strict.py  test_info_templates.py  test_mass_battle.py  test_victory_conditions.py
tests/integration/utils/: data.py  helpers.py
tests/unit/: test_chess_rules.py
