[tool.poetry]
name = "abstract-tactics"
version = "0.1.0"
description = "TBS (Turn-Based Strategy) game backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
pydantic = "^2.11.6"
python-dotenv = "^1.0.1"
redis = "^5.0.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
requests = "^2.32.3"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
