[tool.poetry]
name = "abstract-tactics"
version = "0.1.0"
description = "TBS (Turn-Based Strategy) game backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"                     # keep interpreter constraint
fastapi = "*"
uvicorn = { version = "*", extras = ["standard"] }
pydantic = "*"
python-dotenv = "*"
redis = "*"
httpx = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-xdist = "*"
requests = "*"
pytest-timeout = "*"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
# Make Ruff fast and opinionated
target-version = "py313"
line-length = 88
fix = true
# unsafe-fixes = true
# pre-commit run -a
